# pyderive

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml  rust_ci.yml
pyderive-macros/: Cargo.toml
pyderive-macros/src/: attr.rs  common.rs  internal.rs  lib.rs
pyderive-macros/src/internal/: dataclass_fields.rs  eq.rs  hash.rs  iter.rs  len.rs  match_args.rs  namedtuple_asdict.rs  namedtuple_field_defaults.rs  namedtuple_fields.rs  namedtuple_make.rs  namedtuple_replace.rs  new.rs  ord.rs  repr.rs  reversed.rs  richcmp.rs  str.rs  to_py_object.rs
pyderive-macros/test/: test.rs  test_bitwise.rs  test_convert.rs  test_dataclass_fields.rs  test_eq.rs  test_hash.rs  test_iter.rs  test_len.rs  test_match_args.rs  test_namedtuple_asdict.rs  test_namedtuple_field_defaults.rs  test_namedtuple_fields.rs  test_namedtuple_make.rs  test_namedtuple_replace.rs  test_new.rs  test_numeric.rs  test_ops.rs  test_ord.rs  test_repr.rs  test_reversed.rs  test_richcmp.rs  test_str.rs  test_to_py_object.rs
src/: attr.rs  common.rs  convert.rs  internal.rs  lib.rs  ops.rs
src/internal/: annotations.rs  dataclass_field.rs  dataclass_fields.rs  eq.rs  hash.rs  init.rs  iter.rs  len.rs  match_args.rs  new.rs  ord.rs  repr.rs  reversed.rs  str.rs
test/: test.rs  test_annotations.rs  test_dataclass_fields.rs  test_eq.rs  test_hash.rs  test_init.rs  test_iter.rs  test_len.rs  test_match_args.rs  test_new.rs  test_ord.rs  test_repr.rs  test_reversed.rs  test_str.rs  test_to_py_object.rs
