[package]
name = "pyderive"
version = "0.5.0"
edition = "2021"
# MSRV of inventory v0.3
rust-version = "1.62"
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macro of Python special methods and a class attributes for PyO3"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["python", "pyo3"]

repository = "https://github.com/paqira/pyderive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "extra-traits", "full"] }

[dev-dependencies]
pyo3 = { version = "0.21", features = [
    "auto-initialize",
    "multiple-pymethods",
] }
