[package]
name = "pyderive"
version = "0.7.0"
edition = "2021"
# MSRV of inventory v0.3
rust-version = "1.62"
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/pyderive"
description = "Derive macro of Python special methods and a class attributes for PyO3"
keywords = ["pyo3", "python"]
readme = "README.md"
exclude = [".*"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyderive-macros = { path = "pyderive-macros", version = "= 0.7.0" }

[dev-dependencies]
pyo3 = { version = "0.22", features = [
    "auto-initialize",
    "multiple-pymethods",
] }
num-complex = { version = ">= 0.2" } # for doctest

[features]
num-complex = ["pyo3/num-complex", "pyderive-macros/num-complex"]

[workspace]
members = [
    "pyderive-macros",
]
