[package]
name = "pyderive"
version = "0.9.1"
edition = "2021"
rust-version = "1.74"
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/pyderive"
description = "Derive macro of Python special methods and a class attributes for PyO3"
keywords = ["pyo3", "python"]
readme = "README.md"
exclude = [".*"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pyderive-macros",
]

[dependencies]
pyderive-macros = { path = "pyderive-macros", version = "= 0.9.1" }

[dev-dependencies]
pyo3 = { version = "0.27", features = [
    "auto-initialize",
    "multiple-pymethods",
] }
num-complex = { version = ">= 0.2" } # for doctest

[features]
num-complex = ["pyo3/num-complex", "pyderive-macros/num-complex"]

[package.metadata.docs.rs]
features = ["num-complex"]
rustdoc-args = ["--cfg", "docsrs"]
