[package]
name = "pyderive-macros"
version = "0.8.3"
edition = "2021"
# MSRV of inventory v0.3
rust-version = "1.63"
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/pyderive"
description = "Macros for pyderive crate"
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
heck = { version = "0.5" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["extra-traits", "derive", "full"] }
num-complex = { version = ">= 0.2", optional = true }

[dev-dependencies]
pyo3 = { version = "0.27", features = [
    "auto-initialize",
    "multiple-pymethods",
] }

[features]
num-complex = ["pyo3/num-complex", "dep:num-complex"]
